cmake_minimum_required(VERSION 3.25)
project(LeetCode2CLion)

set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_STANDARD 17)


add_executable(704-binary-search leetcode/editor/cn/704-binary-search.cpp)
add_executable(35-search-insert-position leetcode/editor/cn/35-search-insert-position.cpp)
add_executable(34-find-first-and-last-position-of-element-in-sorted-array leetcode/editor/cn/34-find-first-and-last-position-of-element-in-sorted-array.cpp)
add_executable(27-remove-element leetcode/editor/cn/27-remove-element.cpp)
add_executable(977-squares-of-a-sorted-array leetcode/editor/cn/977-squares-of-a-sorted-array.cpp)
add_executable(209-minimum-size-subarray-sum leetcode/editor/cn/209-minimum-size-subarray-sum.cpp)
add_executable(59-spiral-matrix-ii leetcode/editor/cn/59-spiral-matrix-ii.cpp)
add_executable(203-remove-linked-list-elements leetcode/editor/cn/203-remove-linked-list-elements.cpp)
add_executable(707-design-linked-list leetcode/editor/cn/707-design-linked-list.cpp)
add_executable(206-reverse-linked-list leetcode/editor/cn/206-reverse-linked-list.cpp)

add_executable(383-ransom-note leetcode/editor/cn/383-ransom-note.cpp)
add_executable(541-reverse-string-ii leetcode/editor/cn/541-reverse-string-ii.cpp)
add_executable(05-ti-huan-kong-ge-lcof "leetcode/editor/cn/剑指 Offer 05-ti-huan-kong-ge-lcof.cpp")
add_executable(28-find-the-index-of-the-first-occurrence-in-a-string leetcode/editor/cn/28-find-the-index-of-the-first-occurrence-in-a-string.cpp)
add_executable(459-repeated-substring-pattern leetcode/editor/cn/459-repeated-substring-pattern.cpp)
add_executable(1047-remove-all-adjacent-duplicates-in-string leetcode/editor/cn/1047-remove-all-adjacent-duplicates-in-string.cpp)
add_executable(150-evaluate-reverse-polish-notation leetcode/editor/cn/150-evaluate-reverse-polish-notation.cpp)
add_executable(239-sliding-window-maximum leetcode/editor/cn/239-sliding-window-maximum.cpp)