cmake_minimum_required(VERSION 3.25)
project(LeetCode2CLion)

set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")


add_executable(704-binary-search leetcode/editor/cn/704-binary-search.cpp)
add_executable(35-search-insert-position leetcode/editor/cn/35-search-insert-position.cpp)
add_executable(34-find-first-and-last-position-of-element-in-sorted-array leetcode/editor/cn/34-find-first-and-last-position-of-element-in-sorted-array.cpp)
add_executable(27-remove-element leetcode/editor/cn/27-remove-element.cpp)
add_executable(977-squares-of-a-sorted-array leetcode/editor/cn/977-squares-of-a-sorted-array.cpp)
add_executable(209-minimum-size-subarray-sum leetcode/editor/cn/209-minimum-size-subarray-sum.cpp)
add_executable(59-spiral-matrix-ii leetcode/editor/cn/59-spiral-matrix-ii.cpp)
add_executable(203-remove-linked-list-elements leetcode/editor/cn/203-remove-linked-list-elements.cpp)
add_executable(707-design-linked-list leetcode/editor/cn/707-design-linked-list.cpp)
add_executable(206-reverse-linked-list leetcode/editor/cn/206-reverse-linked-list.cpp)

add_executable(383-ransom-note leetcode/editor/cn/383-ransom-note.cpp)
add_executable(541-reverse-string-ii leetcode/editor/cn/541-reverse-string-ii.cpp)
add_executable(05-ti-huan-kong-ge-lcof "leetcode/editor/cn/剑指 Offer 05-ti-huan-kong-ge-lcof.cpp")
add_executable(28-find-the-index-of-the-first-occurrence-in-a-string leetcode/editor/cn/28-find-the-index-of-the-first-occurrence-in-a-string.cpp)
add_executable(459-repeated-substring-pattern leetcode/editor/cn/459-repeated-substring-pattern.cpp)
add_executable(1047-remove-all-adjacent-duplicates-in-string leetcode/editor/cn/1047-remove-all-adjacent-duplicates-in-string.cpp)
add_executable(150-evaluate-reverse-polish-notation leetcode/editor/cn/150-evaluate-reverse-polish-notation.cpp)
add_executable(239-sliding-window-maximum leetcode/editor/cn/239-sliding-window-maximum.cpp)
add_executable(102-binary-tree-level-order-traversal leetcode/editor/cn/102-binary-tree-level-order-traversal.cpp)
add_executable(110-balanced-binary-tree leetcode/editor/cn/110-balanced-binary-tree.cpp)
add_executable(257-binary-tree-paths leetcode/editor/cn/257-binary-tree-paths.cpp)
add_executable(112-path-sum leetcode/editor/cn/112-path-sum.cpp)
add_executable(113-path-sum-ii leetcode/editor/cn/113-path-sum-ii.cpp)
add_executable(654-maximum-binary-tree leetcode/editor/cn/654-maximum-binary-tree.cpp)
add_executable(98-validate-binary-search-tree leetcode/editor/cn/98-validate-binary-search-tree.cpp)
add_executable(530-minimum-absolute-difference-in-bst leetcode/editor/cn/530-minimum-absolute-difference-in-bst.cpp)
add_executable(701-insert-into-a-binary-search-tree leetcode/editor/cn/701-insert-into-a-binary-search-tree.cpp)
add_executable(216-combination-sum-iii leetcode/editor/cn/216-combination-sum-iii.cpp)
add_executable(17-letter-combinations-of-a-phone-number leetcode/editor/cn/17-letter-combinations-of-a-phone-number.cpp)
add_executable(39-combination-sum leetcode/editor/cn/39-combination-sum.cpp)
add_executable(93-restore-ip-addresses leetcode/editor/cn/93-restore-ip-addresses.cpp)
add_executable(78-subsets leetcode/editor/cn/78-subsets.cpp)
add_executable(46-permutations leetcode/editor/cn/46-permutations.cpp)
add_executable(491-non-decreasing-subsequences leetcode/editor/cn/491-non-decreasing-subsequences.cpp)
add_executable(455-assign-cookies leetcode/editor/cn/455-assign-cookies.cpp)
add_executable(1005-maximize-sum-of-array-after-k-negations leetcode/editor/cn/1005-maximize-sum-of-array-after-k-negations.cpp)
add_executable(134-gas-station leetcode/editor/cn/134-gas-station.cpp)
add_executable(860-lemonade-change leetcode/editor/cn/860-lemonade-change.cpp)
add_executable(763-partition-labels leetcode/editor/cn/763-partition-labels.cpp)
add_executable(738-monotone-increasing-digits leetcode/editor/cn/738-monotone-increasing-digits.cpp)
add_executable(509-fibonacci-number leetcode/editor/cn/509-fibonacci-number.cpp)
add_executable(746-min-cost-climbing-stairs leetcode/editor/cn/746-min-cost-climbing-stairs.cpp)
add_executable(62-unique-paths leetcode/editor/cn/62-unique-paths.cpp)
add_executable(63-unique-paths-ii leetcode/editor/cn/63-unique-paths-ii.cpp)
add_executable(343-integer-break leetcode/editor/cn/343-integer-break.cpp)
add_executable(416-partition-equal-subset-sum leetcode/editor/cn/416-partition-equal-subset-sum.cpp)
add_executable(139-word-break leetcode/editor/cn/139-word-break.cpp)
add_executable(198-house-robber leetcode/editor/cn/198-house-robber.cpp)
add_executable(213-house-robber-ii leetcode/editor/cn/213-house-robber-ii.cpp)
add_executable(188-best-time-to-buy-and-sell-stock-iv leetcode/editor/cn/188-best-time-to-buy-and-sell-stock-iv.cpp)
add_executable(300-longest-increasing-subsequence leetcode/editor/cn/300-longest-increasing-subsequence.cpp)